--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.9",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "material-react-table": "^1.4.2",
     "react": "^18.2.0",
