--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.12",
     "@tanstack/react-query": "^4.20.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "material-react-table": "^1.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
