--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "export-to-csv": "^0.2.1",
     "material-react-table": "^1.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
